--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -101,6 +101,13 @@
       </view>
       <text class="menu-arrow">›</text>
     </view>
+    <view class="menu-item" bindtap="navigateTo" data-url="/pages/profile/my-card/my-card">
+      <view class="menu-left">
+        <image class="menu-icon-img" src="{{iconWdsc}}" mode="aspectFit"></image>
+        <text class="menu-name">我的名片</text>
+      </view>
+      <text class="menu-arrow">›</text>
+    </view>
     <view class="menu-item" bindtap="navigateTo" data-url="/pages/profile/privacy/privacy">
       <view class="menu-left">
         <image class="menu-icon-img" src="{{iconGrys}}" mode="aspectFit"></image>
