--- a/pages/alumni-association/list/list.wxss
+++ b/pages/alumni-association/list/list.wxss
@@ -46,7 +46,7 @@ page {
   position: relative;
   display: flex;
   align-items: center;
-  background-color: #0072B3;
+  background: rgba(255, 255, 255, 0.1);
   border-radius: 50rpx;
   padding: 16rpx 30rpx;
   border: 1rpx solid rgba(255, 255, 255, 0.2);
@@ -171,12 +171,12 @@ page {
 
 /* 校友会列表 */
 .association-list {
-  padding: 70rpx 30rpx 20rpx;
+  padding: 30rpx 30rpx 20rpx;
   background-color: #F5F5F5;
   min-height: 100vh;
   border-top-left-radius: 30rpx;
   border-top-right-radius: 30rpx;
-  margin-top: 0;
+  margin-top: 20rpx;
   background: #F5F5F5;
 }
 
