--- a/pages/alumni-association/list/list.wxml
+++ b/pages/alumni-association/list/list.wxml
@@ -14,7 +14,7 @@
   <view class="search-bar">
     <view class="search-input-wrap">
       <image class="search-left-icon" src="{{iconSearch}}" mode="aspectFit" />
-      <input class="search-input" type="text" placeholder="搜索校友会名称、母校名称" placeholder-style="color:#FFFFFF;font-family:'PingFang SC',sans-serif;" value="{{keyword}}" bindinput="onSearchInput" bindconfirm="onSearch" />
+      <input class="search-input" type="text" placeholder="搜索校友会名称、母校名称" placeholder-style="color:rgba(255,255,255,0.7);font-family:'PingFang SC',sans-serif;" value="{{keyword}}" bindinput="onSearchInput" bindconfirm="onSearch" />
       <view class="search-button" bindtap="onSearch">搜索</view>
     </view>
   </view>
@@ -67,8 +67,8 @@
           <view class="school-info-actions">
             <view class="info-section">
               <!-- 学校名称 -->
-              <view wx:if="{{item.schoolName || item.schoolId}}" class="card-subtitle">
-                <image class="subtitle-icon" src="{{iconSchool}}" mode="aspectFit" />
+              <view wx:if="{{item.schoolName || item.schoolId}}" class="card-location">
+                <image class="location-icon" src="{{iconSchool}}" mode="aspectFit" />
                 <text>{{item.schoolName || item.schoolId}}</text>
               </view>
 
