--- a/pages/school/list/list.wxss
+++ b/pages/school/list/list.wxss
@@ -45,7 +45,7 @@ page {
   display: flex;
   align-items: center;
   background: #0072B4;
-  border-radius: 20rpx;
+  border-radius: 21.74rpx;
   padding: 16rpx 30rpx;
   border: 1rpx solid rgba(255, 255, 255, 0.2);
 }
@@ -70,14 +70,18 @@ page {
 }
 
 .search-button {
-  padding: 10rpx 24rpx;
-  background-color: #43A4F1;
+  width: 128.62rpx;
+  height: 45.29rpx;
+  background-color: #66B3FD;
   color: #FFFFFF;
   font-size: 24rpx;
   border-radius: 50rpx;
   margin-left: 16rpx;
   flex-shrink: 0;
   font-family: 'PingFang SC', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* 整合筛选区域 */
